--- a/src/component/home.css
+++ b/src/component/home.css
@@ -12,3 +12,7 @@
 .card-body{
   align-items:center;
 }
+.dropdown-menu a:hover {background-color:darkblue;}
+.dropdown-item:hover{
+  color:yellow;
+}
