--- a/src/treecomponent/treecomponent.css
+++ b/src/treecomponent/treecomponent.css
@@ -1,7 +1,6 @@
-.container {
-  margin: 0 auto;
+.Component{
+  background-color:white;
 }
-
 #emptyTreeMsg {
   position: absolute;
   top: 50%;
@@ -37,7 +36,6 @@
   display: flex;
   justify-content: space-between;
 }
-
 .left {
   justify-content: flex-start !important;
 }
@@ -52,7 +50,6 @@
   display: flex;
   justify-content: flex-end;
 }
-
 .visited {
   background-color: #3eb5c6;
 }
@@ -71,15 +68,15 @@ input {
 .navbar {
   display: flex;
   justify-content: center;
-  border-bottom: 2px solid teal;
-  background-color: teal;
+  border-bottom: 2px solid black;
+  background-color:gray;
   border-bottom: 0.5em solid #005353;
   padding-bottom: 0.7em;
   height:7vw;
 }
 
 button {
-  background-color: #005353;
+  background-color:blue;
   font-family: 'Montserrat', sans-serif;
   padding:0.5em;
   color: white;
@@ -108,24 +105,14 @@ input:focus {
   outline: none !important;
 }
 
-.logo-bar {
-  padding: 2em 2em 0.5em;
-  display: flex;
-  justify-content: center;
-  background-color: teal;
-}
 
 #title {
   color: white;
   font-size: 3em;
 }
 
-.logo {
-  margin: 0 3em;
-}
-
 .main-actions {
-  background-color: teal;
+  background-color:darkRed;
   display: flex;
   justify-content: center;
   align-items: center;
